# orcx

./: .gitignore  AGENTS.md  BUGS.md  README.md  pyproject.toml
.github/workflows/: release.yml
.tasks/: config.json  orcx-62xg.json  orcx-6fin.json  orcx-6gx1.json  orcx-d3zz.json  orcx-f8x1.json  orcx-g13j.json  orcx-i4sp.json  orcx-k94x.json  orcx-pnp0.json  orcx-rs2u.json  orcx-svaz.json  orcx-wusu.json  tk-6gx1.json  tk-d3zz.json  tk-g13j.json  tk-i4sp.json  tk-rs2u.json
ai/: DECISIONS.md  DESIGN.md  ROADMAP.md  STATUS.md  TODO.md
ai/design/: LOCAL_SERVING.md  conversations.md  global-provider-prefs.md
ai/research/: llm-aggregators.md  provider-apis.md  provider-routing.md
ai/review/: bugfixes.md  conversations.md  final.md
src/orcx/: __init__.py  cli.py  config.py  conversation.py  errors.py  registry.py  router.py  schema.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_conversation.py  test_router.py  test_schema.py
