[project]
name = "orcx"
version = "0.1.0"
description = "LLM orchestrator - harness-agnostic agent routing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Nick" }]
keywords = ["llm", "agents", "orchestration", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.50.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
orcx = "orcx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ty]
python-version = "3.12"
