[project]
name = "orcx"
version = "0.1.0"
description = "LLM orchestrator - harness-agnostic agent routing"
license = "MIT"
keywords = ["llm", "agents", "orchestration", "ai"]
readme = "README.md"
authors = [
    { name = "Nick Russo", email = "nijaru7@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "litellm>=1.80.11",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "typer>=0.21.0",
]

[project.scripts]
orcx = "orcx.cli:app"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ty.environment]
python-version = "3.14"
